Issue #WEB-1644 fixed
